Changed name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "synccentric/synccentric_api_sdk",
+	"name": "synccentric/sync-sdk",
 	"description": "SDK for v3.synccentric.com",
 	"license": "MIT",
 	"authors": [
